--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@
                     <video autoplay muted loop src="./Elem 3.mp4"></video>
                 </div>
             </div>
+            <div class="page3-elements-lowerVid">
+                <div class="low-vid">
+                    <video autoplay muted loop src="./reel-full.mp4"></video>
+                </div>
+            </div>
+            <div class="page3-lower-text">
+                <div class="page3-lower-top-text">
+                    <h2>We operate on a simple philosophy:</h2>
+                    <h2>Quality over quantity.</h2>
+                </div>
+                <div class="page3-lower-bottom-text">
+                    <p>We partner with not many clients but with whom who really wanted to be a brand each year. This allows
+                        for intense focus on the transformation and launch of your brand by our very best team, which is the only team
+                        we have.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
     
