--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
                 </div>
             </div>
             <div class="middle-part">
-                <p>We are a digital brand accelerator. We design and develop market-defining brands through award-winning deliverables.
-                    Choose full cash compensation or offset upto 50% of our for equity in your company. Your vision, your decision.
+                <p class="pag2-middle-text">We are a digital brand accelerator. We design and develop market-defining brands through award-winning deliverables. 
+                    
+                    Choose full cash compensation or offset upto 50% of our for equity in your company. 
+                    Your vision, your decision.
                 </p>
             </div>
             <div class="lower-part">
@@ -130,9 +132,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"
         integrity="sha512-onMTRKJBKz8M1TnqqDuGBlowlH0ohFzMXYRNebz+yOcc5TQr/zAKsthzhuv0hiyUKEiQEQXEynnXCvNTOk50dg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/TextPlugin.min.js"
-        integrity="sha512-xAxjKW1J/R4TFytv43xvQ7jFTrJlBzsDOH/Aw0fFc2nvarQkE3d08lTicjzUsZJYDoHYDCpwsUUqOJXh34A1sw=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/SplitText.min.js"></script>
     <script src="script.js"></script>
