added micro-animations on page3

--- a/index.html
+++ b/index.html
@@ -117,9 +117,7 @@
                     <h2>Quality over quantity.</h2>
                 </div>
                 <div class="page3-lower-bottom-text">
-                    <p>We partner with not many clients but with whom who really wanted to be a brand each year. This allows
-                        for intense focus on the transformation and launch of your brand by our very best team, which is the only team
-                        we have.
+                    <p class="page3-lower-bottom-text-para">We partner with not many clients but with whom who really wanted to be a brand each year. This allows for intense focus on the transformation and launch of your brand by our very best team, which is the only team we have.
                     </p>
                 </div>
             </div>
