--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="navbar">
+        <h3>nivora</h3>
+        <div class="menu">
+            <h4>Home</h4>
+            <h4>Work</h4>
+            <h4>Services</h4>
+            <h4>About</h4>
+            <h4>Contact</h4>
+        </div>
+        <h3>Let's Talk</h3>
+    </div>
     <div id="main">
         <div id="page1">
             <!-- <div class="videos">
@@ -45,17 +56,6 @@
                 </h1>
             </div>
         </div>
-        <!-- <nav class="fixed">
-            <h3>nivora</h3>
-            <div class="menu">
-                <h4>Home</h4>
-                <h4>Work</h4>
-                <h4>About</h4>
-                <h4>Service</h4>
-                <h4>Contact</h4>
-            </div>
-            <h3>Let's talk</h3>
-        </nav> -->
         <div id="page2">
             <div class="upper-part">
                 <div class="upper-left">
