--- a/index.html
+++ b/index.html
@@ -21,22 +21,14 @@
         </div>
         <h3>Let's Talk</h3>
     </div>
+    <div class="loader">
+        <h3>Tomorrow's</h3>
+        <h3>startup,</h3>
+        <h3>Tomorrow's</h3>
+        <h3>brand</h3>
+    </div>
     <div id="main">
         <div id="page1">
-            <!-- <div class="videos">
-                <video class="vid1"
-                    src="./SaveVid.Net_AQNEFHPFByoueViGGgPm3ZzvADyVdWFw9gCjDVdMPyCpLwZdZW9Lf8PN-C59Jg-c8Rh_xPY3owDhmzUUy3N-VwOXeJT12ImvNpBQhBw.mp4"
-                    autoplay loop muted></video>
-                <video class="vid2"
-                    src="./SaveVid.Net_AQNEFHPFByoueViGGgPm3ZzvADyVdWFw9gCjDVdMPyCpLwZdZW9Lf8PN-C59Jg-c8Rh_xPY3owDhmzUUy3N-VwOXeJT12ImvNpBQhBw.mp4"
-                    autoplay loop muted></video>
-                <video class="vid2"
-                    src="./SaveVid.Net_AQNEFHPFByoueViGGgPm3ZzvADyVdWFw9gCjDVdMPyCpLwZdZW9Lf8PN-C59Jg-c8Rh_xPY3owDhmzUUy3N-VwOXeJT12ImvNpBQhBw.mp4"
-                    autoplay loop muted></video>
-                <video class="vid2"
-                    src="./SaveVid.Net_AQNEFHPFByoueViGGgPm3ZzvADyVdWFw9gCjDVdMPyCpLwZdZW9Lf8PN-C59Jg-c8Rh_xPY3owDhmzUUy3N-VwOXeJT12ImvNpBQhBw.mp4"
-                    autoplay loop muted></video>
-            </div> -->
             <div id="cursor">
                 <h5>Play Reel </h5>
             </div>
