--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </div>
         <h3>Let's Talk</h3>
     </div>
-    <div class="loader">
+    <!-- <div class="loader">
         <h3>Tomorrow's</h3>
         <h3>startup,</h3>
         <h3>Tomorrow's</h3>
         <h3>brand</h3>
-    </div>
+    </div> -->
     <div id="main">
         <div id="page1">
             <div id="cursor">
@@ -151,6 +151,96 @@
                         </div>
                         
                     </div>
+                </div>
+            </div>
+            <div class="page5-bottom">
+                <div class="page5-svg-block">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z0cA4ZbqstJ970C3_Rivian_logo_and_wordmark2.svg" alt="">
+                </div>
+                <div class="page5-svg-block">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z0cAzJbqstJ970Cv_Frame1073714686.svg" alt="">
+                </div>
+                <div class="page5-svg-block">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2LneZbqstJ98pKu_Moxion.svg" alt="">
+                </div>
+                <div class="page5-svg-block">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z1r07ZbqstJ98aSL_8VCVCFirm.svg" alt="">
+                </div>
+                <div class="page5-svg-block">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2LlrpbqstJ98pJz_RAPPI.svg" alt="">
+                </div>
+                <div class="page5-svg-block">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2Lo5ZbqstJ98pLj_HYPERFRAME.svg" alt="">
+                </div>
+                <div class="page5-svg-block">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z0cAypbqstJ970Cs_Frame1073714684.svg" alt="">
+                </div>
+                <div class="page5-svg-block">
+                    <img src="https://rejouice-2024.cdn.prismic.io/rejouice-2024/Z2HXc5bqstJ98naA_Proof.svg" alt="">
+                </div>
+            </div>
+        </div>
+        <div id="page6">
+            <div class="page6-part1">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif" alt="">
+                <div class="page6-p1-text-block">
+                    <h1>RIVIAN <br> RIVIAN</h1>
+                </div>
+            </div>
+            <div class="page6-part1">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+                    alt="">
+                <div class="page6-p1-text-block">
+                    <h1>RIVIAN <br> RIVIAN</h1>
+                </div>
+            </div>
+            <div class="page6-part1">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+                    alt="">
+                <div class="page6-p1-text-block">
+                    <h1>RIVIAN <br> RIVIAN</h1>
+                </div>
+            </div>
+            <div class="page6-part1">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+                    alt="">
+                <div class="page6-p1-text-block">
+                    <h1>RIVIAN <br> RIVIAN</h1>
+                </div>
+            </div>
+            <div class="page6-part1">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+                    alt="">
+                <div class="page6-p1-text-block">
+                    <h1>RIVIAN <br> RIVIAN</h1>
+                </div>
+            </div>
+            <div class="page6-part1">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+                    alt="">
+                <div class="page6-p1-text-block">
+                    <h1>RIVIAN <br> RIVIAN</h1>
+                </div>
+            </div>
+            <div class="page6-part1">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+                    alt="">
+                <div class="page6-p1-text-block">
+                    <h1>RIVIAN <br> RIVIAN</h1>
+                </div>
+            </div>
+            <div class="page6-part1">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+                    alt="">
+                <div class="page6-p1-text-block">
+                    <h1>RIVIAN <br> RIVIAN</h1>
+                </div>
+            </div>
+            <div class="page6-part1">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+                    alt="">
+                <div class="page6-p1-text-block">
+                    <h1>RIVIAN <br> RIVIAN</h1>
                 </div>
             </div>
         </div>
