--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <h3>nivora</h3>
         <div class="menu">
             <h4>Home</h4>
-            <h4>Work</h4>
             <h4>Services</h4>
+            <h4>Work</h4>
             <h4>About</h4>
             <h4>Contact</h4>
         </div>
         <h3>Let's Talk</h3>
     </div>
-    <!-- <div class="loader">
+    <div class="loader">
         <h3>Tomorrow's</h3>
         <h3>startup,</h3>
         <h3>Tomorrow's</h3>
         <h3>brand</h3>
-    </div> -->
+    </div>
     <div id="main">
         <div id="page1">
             <div id="cursor">
@@ -181,66 +181,66 @@
             </div>
         </div>
         <div id="page6">
-            <div class="page6-part1">
+            <div class="page6-part1" id="page6-part1">
                 <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif" alt="">
                 <div class="page6-p1-text-block">
                     <h1>RIVIAN <br> RIVIAN</h1>
                 </div>
             </div>
-            <div class="page6-part1">
-                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+            <div class="page6-part1" id="page6-part2">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5X5bqstJ98aZ9_oura.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
                     alt="">
                 <div class="page6-p1-text-block">
-                    <h1>RIVIAN <br> RIVIAN</h1>
+                    <h1>OURA <br> OURA</h1>
                 </div>
             </div>
-            <div class="page6-part1">
-                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+            <div class="page6-part1" id="page6-part3">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5XZbqstJ98aZ6_moxion.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
                     alt="">
                 <div class="page6-p1-text-block">
-                    <h1>RIVIAN <br> RIVIAN</h1>
+                    <h1>MOXION <br> MOXION</h1>
                 </div>
             </div>
-            <div class="page6-part1">
-                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+            <div class="page6-part1" id="page6-part4">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5V5bqstJ98aZx_connect-homes.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
                     alt="">
                 <div class="page6-p1-text-block">
-                    <h1>RIVIAN <br> RIVIAN</h1>
+                    <h1>8VC <br> 8VC</h1>
                 </div>
             </div>
-            <div class="page6-part1">
-                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+            <div class="page6-part1" id="page6-part5">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5YZbqstJ98aaB_pinch.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
                     alt="">
                 <div class="page6-p1-text-block">
-                    <h1>RIVIAN <br> RIVIAN</h1>
+                    <h1>RAPPI <br> RAPPI</h1>
                 </div>
             </div>
-            <div class="page6-part1">
-                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+            <div class="page6-part1" id="page6-part6">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5WpbqstJ98aZ1_hyperframe.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
                     alt="">
                 <div class="page6-p1-text-block">
-                    <h1>RIVIAN <br> RIVIAN</h1>
+                    <h1>HYPERFRAME <br> HYPERFRAME</h1>
                 </div>
             </div>
-            <div class="page6-part1">
-                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+            <div class="page6-part1" id="page6-part7">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5YJbqstJ98aaA_ov-loop.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
                     alt="">
                 <div class="page6-p1-text-block">
-                    <h1>RIVIAN <br> RIVIAN</h1>
+                    <h1>OV LOOP <br> OV LOOP</h1>
                 </div>
             </div>
-            <div class="page6-part1">
-                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+            <div class="page6-part1" id="page6-part8">
+                <img src="https://images.prismic.io/rejouice-2024/Z3R385bqstJ986dE_Untitled-2.jpg?auto=format,compress&w=2048&h=1152&fm=avif"
                     alt="">
                 <div class="page6-p1-text-block">
-                    <h1>RIVIAN <br> RIVIAN</h1>
+                    <h1>PROOF <br> PROOF</h1>
                 </div>
             </div>
-            <div class="page6-part1">
-                <img src="https://images.prismic.io/rejouice-2024/Z1r5Y5bqstJ98aaF_rivian.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
+            <div class="page6-part1" id="page6-part9">
+                <img src="https://images.prismic.io/rejouice-2024/Z1r5ZZbqstJ98aaI_unspun.jpg?auto=format,compress&w=2048&h=1178&fm=avif"
                     alt="">
                 <div class="page6-p1-text-block">
-                    <h1>RIVIAN <br> RIVIAN</h1>
+                    <h1>UNSPUN <br> UNSPUN</h1>
                 </div>
             </div>
         </div>
