updated page7 and page8 micro-interactions

--- a/index.html
+++ b/index.html
@@ -246,8 +246,7 @@
         </div>
         <div id="page7">
             <div class="page7-top-text">
-                <p>We are a collective of seasoned creatives, strategists, growth marketers, and technologists, dedicated to transforming
-                ambitious visions into high-performing brands.</p>
+                <p class="page7-top-text-para">We are a collective of seasoned creatives, strategists, growth marketers, and technologists, dedicated to transforming ambitious visions into high-performing brands.</p>
             </div>
             <div class="page7-second-text">
                 <div class="second-text-left">
@@ -269,25 +268,28 @@
         <div id="page8">
             <div class="page8-top-text">
                 <div class="page8-top-left">
-                    <span>A</span>
-                    <span>W</span>
-                    <span>W</span>
-                    <span>W</span>
-                    <span>A</span>
-                    <span>R</span>
-                    <span>D</span>
-                    <span>S</span>
+                    <h1>
+                        <span>A</span>
+                        <span>W</span>
+                        <span>W</span>
+                        <span>W</span>
+                        <span>A</span>
+                        <span>R</span>
+                        <span>D</span>
+                        <span>S</span>
+                    </h1>
+                    
                 </div>
                 <div class="page8-top-right">
                     <h1>(x17)</h1>
                 </div>
             </div>
             <div class="page8-bottom-text">
-                <div class="second-text-left">
+                <div class="page8-second-text-left">
                     <h3>Awards for digital innovations.</h3>
                 </div>
                 <div class="second-text-right">
-                    <div class="right-list">
+                    <div class="page8-right-list">
                         <h3>(17x) Awwwards</h3>
                         <h3>(15x) FWA</h3>
                         <h3>(22x) CSS design</h3>
