added micro-interations on page 9 and page 10

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
         </div>
         <div id="page10">
             <div class="page10-top-text">
-                <p>Attention is earned, not given. Great work matters most when it inspires action. We build brands that transform
+                <p class="page10-top-text-para">Attention is earned, not given. Great work matters most when it inspires action. We build brands that transform
                 attention into transactions by unlocking your brand's potential for impact and growth.</p>
             </div>
             <div class="page10-team">
