--- a/index.html
+++ b/index.html
@@ -345,6 +345,14 @@
                 </div>
             </div>
         </div>
+        <div id="page11">
+            <div class="page11-text-box">
+                <div class="page11-inner-text-box">
+                    <h2>Join our global team. <br> Explore opportunities >>> </h2>
+                </div>
+                <div class="page11-below-line"></div>
+            </div>
+        </div>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
