added footer section

--- a/index.html
+++ b/index.html
@@ -353,6 +353,63 @@
                 <div class="page11-below-line"></div>
             </div>
         </div>
+        <footer class="page12">
+            <div class="page12-top-main">
+                <div class="page12-top-left">
+                    <h1>Do it Once. Do it right.</h1>
+                    <div class="form-container">
+                        <h2>Contact Us</h2>
+                        <form class="form-div" onsubmit="emailSend(); reset(); return false">
+                            <input type="text" id="name" placeholder="Name" name="name" required>
+                            <input type="text" id="phone" placeholder="Phone" name="phone" required>
+                            <input type="email" id="email" placeholder="Email" name="email" required>
+                            <button type="submit" class="btn">Reach Us</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="page12-top-right">
+                    <div class="page12-top-list">
+                        <div class="page12-top-left-list">
+                            <h3>Home</h3>
+                            <h3>Services</h3>
+                            <h3>Work</h3>
+                            <h3>About</h3>
+                            <h3>Contact</h3>
+                        </div>
+                        <div class="page12-top-right-list">
+                            <h3>Instagram</h3>
+                            <h3>Dribbble</h3>
+                            <h3>Twitter</h3>
+                            <h3>LinkedIn</h3>
+                            <h3>Facebook</h3>
+                        </div>
+                    </div>
+                    <div class="page12-bottom-list">
+                        <div class="page12-bottom-left-list">
+                            <h3>San Diego-USA</h3>
+                            <h3>Paris-France</h3>
+                            <h3>Mumbai-India</h3>
+                        </div>
+                        <div class="page12-bottom-right-list">
+                            <h3>Terms of use</h3>
+                            <h3>©13-25</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="page12-bottom-main">
+                <div class="page12-bottom-main-text">
+                    <h1>
+                        <span>n</span>
+                        <span>i</span>
+                        <span>v</span>
+                        <span>o</span>
+                        <span>r</span>
+                        <span>a</span>
+                    </h1>
+                </div>
+            </div>
+        </footer>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
